overflow fix

--- a/the cave/cave/src/assets/scss/components/canvas-menu.scss
+++ b/the cave/cave/src/assets/scss/components/canvas-menu.scss
@@ -32,6 +32,7 @@
 			height: 20vh;
 			padding-left: 10px;
 			border: 1px solid $dark-gray;
+			overflow-x: hidden;
 		}
 @media screen and (max-width: 1190px) {
 	.grid-block {
